--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.32.1",
     "antd": "^5.16.5",
     "next": "14.2.3",
     "react": "^18",
