--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "antd": "^5.16.5",
     "next": "14.2.3",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
